FIND_PACKAGE(TULIP REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

QTX_ADD_RESOURCES(LIB_RCC_SRCS
    interactor_plugin_resource.qrc
)

INCLUDE_DIRECTORIES(${TulipCoreBuildInclude} ${TulipCoreInclude} ${TulipOGLInclude} ${TulipGUIInclude})

ADD_LIBRARY(interactor_plugin-${TULIP_VERSION} SHARED interactor_plugin.cpp ${LIB_RCC_SRCS})
TARGET_LINK_LIBRARIES(interactor_plugin-${TULIP_VERSION} ${TULIP_LIBRARIES} ${QT_LIBRARIES})

INSTALL(TARGETS interactor_plugin-${TULIP_VERSION} DESTINATION ${TULIP_PLUGINS_DIR} COMPONENT interactor_plugin-${TULIP_VERSION})
